# Simple-ascon-hash-implementation-rust

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: SomeText.txt  lib.rs  main.rs  parallel_implementations.rs  test_padding_from_utf8_string.rs  test_permutation.rs
