[package]
name = "ascon_hash_implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1" # criterion is a library for benchmarking

[[bench]]
name = "my_benchmark"
harness = false # no bencharking harness as we add our own 
